--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <header>
-        <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
             <a class="navbar-brand" href="index.html">FunkoPop</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main>
-
+        <h1>Pagina Index</h1>
     </main>
     <footer class="bg-dark text-light text-center py-4">
         <p>&copy; Todos los derechos reservados</p>
