--- a/src/admin.html
+++ b/src/admin.html
@@ -51,7 +51,7 @@
                 </div>
             </article>
             <article class="table-responsive">
-                <table class="table" id="tablaFunko">
+                <table class="table" >
                     <thead class="thead-dark">
                         <tr>
                             <th scope="col">#</th>
@@ -64,7 +64,7 @@
                             <th scope="col">Acciones</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="tablaFunko">
                         <tr>
                             <th scope="row">1</th>
                             <td>Superman</td>
